# scb-ppnr-methodology

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
architecture/: interest-expense-design.md  interest-income-design.md
config/: company.template.toml
examples/: diagnose_deposits.py  run_from_config.py  run_income_calculators.py  run_synthetic_family.py  synthetic_config.toml
examples/synthetic_data/: firm_inputs.csv  firm_inputs_quarterly.csv  firm_inputs_spot.csv  mev_scenarios.csv
handbook/: chapter-template.md  open-questions.md
handbook/cross-cutting/: asset-side-common-conventions.md  liability-side-common-conventions.md
handbook/models/: ie_foreign_dep.md  ie_foreign_dep.review.md  ie_foreign_dep.yaml  ie_other_dom_dep.md  ie_other_dom_dep.review.md  ie_other_dom_dep.spec.yaml
inventory/: asset-side-model-matrix.md  liability-side-model-matrix.md  model-inventory.md  source-integrity-review.md  source-map.md
reviews/interest-expense/: liability-side-integration.review.md
reviews/interest-expense/deposits/: ie_foreign_dep.review.md  ie_other_dom_dep.review.md
reviews/interest-expense/funding/: ie_fed_funds_repo.review.md  ie_other_borrowing.review.md
reviews/interest-income/calculators/: ii_dep_banks_other.review.md  ii_other_ida.review.md
reviews/interest-income/securities/: ii_mbs.review.md  ii_other_sec.review.md  ii_ust.review.md
sources/fed/: market-risk-models-securities-extracts.md  pre-provision-net-revenue-models.md
specifications/: model-spec-guidelines.md
src/scb_ppnr/: __init__.py
tests/: conftest.py
(+63 files in other folders)
