[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scb-ppnr"
version = "0.1.0"
description = "Generic calculation framework for the proposed 2026 Federal Reserve PPNR interest-expense models (reference implementation of the methodology handbook; canonical inputs and synthetic data only)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
